--- a/dream-maker/package.json
+++ b/dream-maker/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/paper": "^0.11.14",
     "@types/react-color": "^3.0.13",
-    "paper": "^0.12.18",
+    "konva": "^9.3.22",
     "react": "^19.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
+    "react-konva": "^19.0.7",
     "react-rnd": "^10.5.2",
     "zustand": "^5.0.8"
   },
