Added basic concept of layers

--- a/dream-maker/package.json
+++ b/dream-maker/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-color": "^3.0.13",
     "konva": "^9.3.22",
+    "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
