--- a/dream-maker/package.json
+++ b/dream-maker/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react-color": "^3.0.13",
     "konva": "^9.3.22",
     "lucide-react": "^0.541.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
     "react-konva": "^19.0.7",
     "react-rnd": "^10.5.2",
+    "tailwindcss": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
